actualiza el index

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>encriptador de textos</title>
-    <link rel="shortcut icon" href="img/encriptado.jpg" type="image/x-icon">
+    <link rel="shortcut icon" href="img/6772234.png" type="image/x-icon">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
